fix crash Android 8-13 NoSuchMethodError, prevent crash for missing card